force-app/main/default/objects/Customer_External__x/Customer_External__x.object-meta.xml
<CustomObject>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>Customer__c</externalName>
    <label>Customer External</label>
    <pluralLabel>Customer Externals</pluralLabel>
</CustomObject>