force-app/main/default/objects/Customer_External__x/fields/BusinessSector__c.field-meta.xml
<CustomField>
    <fullName>BusinessSector__c</fullName>
    <externalDeveloperName>BusinessSector</externalDeveloperName>
    <label>Business  Sector</label>
    <length>128</length>
    <type>Text</type>
</CustomField>