force-app/main/default/objects/Customer_External__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>20</length>
    <referenceTargetField>Customer__c.GUID__c</referenceTargetField>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer Externals</relationshipLabel>
    <relationshipName>Customer_Externals</relationshipName>
    <type>IndirectLookup</type>
</CustomField>