force-app/main/default/objects/Customer_External__x/fields/ManagingCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ManagingCustomerNumber__c</fullName>
    <externalDeveloperName>ManagingCustomerNumber</externalDeveloperName>
    <label>Managing Customer Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>