force-app/main/default/objects/Customer_External__x/fields/Slice__c.field-meta.xml
<CustomField>
    <fullName>Slice__c</fullName>
    <externalDeveloperName>Slice</externalDeveloperName>
    <label>Slice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>