force-app/main/default/objects/Customer_External__x/fields/TargetSector__c.field-meta.xml
<CustomField>
    <fullName>TargetSector__c</fullName>
    <externalDeveloperName>TargetSector</externalDeveloperName>
    <label>Target Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>